@@ -1,1 +1,3 @@
 mvn test
+
+#mvn test -Denv_variable='JAVA_TOOL_OPTIONS=--add-opens=java.base/java.time=ALL-UNNAMED'
